--- a/css/styles.css
+++ b/css/styles.css
@@ -285,26 +285,26 @@ button {
 
 .hero-section {
     background-color: #2e2f42;
-    padding-top: 188px;
-    padding-bottom: 188px;
+    padding-top: 72px;
+    padding-bottom: 72px;
     background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url("../images/hero/people-office.jpg");
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    max-width: 1440px;
+    max-width: 320px;
     margin: 0 auto;
 }
 
 .hero-title {
     font-weight: 700;
-    font-size: 56px;
-    line-height: 1.07;
+    font-size: 36px;
+    line-height: 1.11;
+    letter-spacing: 0.02em;
     text-align: center;
     color: #fff;
-    letter-spacing: 0.02em;
-    max-width: 496px;
+    max-width: 216px;
     margin: 0 auto;
-    margin-bottom: 48px;
+    margin-bottom: 72px;
 }
 
 /* Benefits */
@@ -902,6 +902,22 @@ button {
         display: none;
     }
 
+    /* HERO */
+    .hero-section {
+        max-width: 768px;
+        padding-top: 112px;
+        padding-bottom: 112px;
+    }
+
+    .hero-title {
+
+        font-size: 56px;
+        line-height: 1.07;
+        max-width: 496px;
+        margin-bottom: 36px;
+    }
+
+
     /* benefits */
     .benefits-subtitle {
         text-align: left;
@@ -986,6 +1002,19 @@ button {
         line-height: 1.5;
         letter-spacing: 0.02em;
     }
+
+    /* HERO */
+    .hero-section {
+        max-width: 1440px;
+        padding-top: 188px;
+        padding-bottom: 188px;
+
+    }
+
+    .hero-title {
+        margin-bottom: 48px;
+    }
+
 
     /* Benefits */
     .benefits-subtitle {
