--- a/css/styles.css
+++ b/css/styles.css
@@ -607,11 +607,12 @@ button {
     top: 50%;
     left: 50%;
     border-radius: 4px;
-    width: 408px;
-    min-height: 584px;
+    width: 288px;
+    min-height: 623px;
     box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 2px 1px 0 rgba(0, 0, 0, 0.2);
     background-color: #fcfcfc;
-    padding: 72px 24px 24px;
+    padding: 72px 16px 24px;
+
 
     transform: translate(-50%, -50%);
 
@@ -694,6 +695,7 @@ button {
 
 .modal-textarea::placeholder {
     color: rgba(46, 47, 66, 0.4);
+    font-size: 12px;
 }
 
 .modal-label {
@@ -725,10 +727,6 @@ button {
     margin-bottom: 16px;
 }
 
-/* .modal-field-textarea textarea {
-    font-size: 16px;
-} */
-
 .modal-textarea {
     font-size: 16px;
     line-height: 1.17;
@@ -751,6 +749,8 @@ button {
 }
 
 .modal-checkbox {
+    display: flex;
+    gap: 8px;
     justify-content: flex-start;
     align-items: center;
     margin-bottom: 0;
@@ -781,13 +781,14 @@ button {
     height: 16px;
     border-radius: 2px;
     border: 1px solid rgba(46, 47, 66, 0.4);
-    margin-right: 8px;
     display: inline-flex;
     justify-content: center;
     align-items: center;
     fill: transparent;
 
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    flex-shrink: 0;
 }
 
 .modal-btn {
@@ -989,6 +990,14 @@ button {
 
     .footer-input {
         width: 264px;
+    }
+
+    /* MODAL */
+
+    .modal {
+        width: 408px;
+        min-height: 584px;
+        padding: 72px 24px 24px;
     }
 
 }
